DROP TABLE IF EXISTS proposalevents CASCADE;

-- Events data
CREATE TABLE proposalevents (
    event_id     INT  generated by default as identity,
    proposal_id  INT,

    event_guid   VARCHAR(36) not null,

    payload      VARCHAR(1024) not null,

    processed    BOOLEAN DEFAULT FALSE,

    created_date  TIMESTAMP DEFAULT now(),
    processed_date  TIMESTAMP,

    PRIMARY   KEY(event_id),

    CONSTRAINT fk_customer
        FOREIGN KEY(proposal_id)
            REFERENCES proposals(proposal_id)
);

-- You may use the stored procedure - this is the template for it
-- Stored procedure
--create or replace function insert_proposal()
--RETURNS int AS $$
--DECLARE proposal_id_ret integer;
--begin
--
--
--    INSERT INTO proposals(customer_id, package_id, pax_0, pax_age_0,pax_1, pax_age_1,pax_2, pax_age_2)  VALUES(1, 'BAHAMAS3NTCRUISE@CARNIVAL' , 'John--Doe',38, 'Jane--Doe' ,32, 'Jack--Doe' ,6) RETURNING proposal_id INTO proposal_id_ret;
--    INSERT INTO proposalevents(proposal_id,event_guid,payload) VALUES(proposal_id_ret,'guid','payload');
--
--    RETURN proposal_id_ret;
--
--    COMMIT;
--
--end;$$
--language plpgsql

